# wg-data-science

./: .gitignore  CONTRIBUTING.md  README.md  apache_url_to_table.py  raw_repositories.json  structured_project_analysis.csv  structured_project_cleaned.json
.github/ISSUE_TEMPLATE/: 01-insight-guide-proposal.md  01-insight-guide-proposal.yaml  (+2 more)
augur-analysis/: LICENSE  README.md  plotly_tutorial.ipynb
challenges_survey/: README.md  challenge_comment_categories.md
collectoss-analysis/: README.md
dataset/: README.md
events/: hackathon-june-2025.md
oikoscope/: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
oikoscope/.github/: PULL_REQUEST_TEMPLATE.md
oikoscope/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_contribution.yml
oikoscope/data/raw/: README.md
oikoscope/docs/: brand.md  cra-eu-relevance.md  dataset-status.md  repository-structure-recommendation.md  research-design.md  standalone-repository.md
oikoscope/schemas/: apache-dataset.schema.json
oikoscope/scripts/: generate_favicons.py
oikoscope/src/oikoscope/: __init__.py  __main__.py  cli.py
practitioner-guides/: README.md  contributor-sustainability.md  demonstrating-org-value.md  diverse-leadership.md  funding-impact.md  introduction.md  organizational-participation.md  project-state-diagram.md  research-sw-impact.md  responsiveness.md  security.md  sunset.md  viability.md  website-landing.md
practitioner_guides/: introduction.md
publications/: README.md  publication-guidelines.md
(+126 files in other folders)
